# CFM_simulation

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  requirements.txt
scripts/: calc_dh.py  density_error.py  forcing_data.py  melt_map.py  plot_cfm.py  plot_cfm.sh  plot_density_error.py  plot_firn_moisture.py  plot_melt.py  plot_rcm_ts.py  plot_spatial.py  process_brad_cores.py  rcm_ts_plots.py  read_force_data.py  run_cfm.py  run_cfm.sh  run_cfm_grid.sh  run_melt.py
src/: __init__.py
src/cfm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cfm_sim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/force/: __init__.py  melt.py  process.py
src/plot/: __init__.py  melt.py  results.py  spatial.py
src/sim/: __init__.py  run.py
