[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cfm"
version = "0.1.0"
description = "Community firn model simulation with forcing data processing and gridded simulation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-exclude = ["*.ipynb", "notebooks/**"]
line-length = 120